--- a/src/build.gradle
+++ b/src/build.gradle
@@ -28,48 +28,18 @@ repositories {
 }
 
 dependencies {
-    // Compile GWT libs, needed for gwtCompile and the javaCompile
-    // Also includes the servlet-api
-    providedCompile 'com.google.gwt:gwt-user:2.7.0'
-    providedCompile 'com.google.gwt:gwt-dev:2.7.0'
 
-    // Needed for GWT compile and at runtime for RequestBuilder
-    // Specify two artifacts as workaround for GRADLE-1934
-    compile('javax.validation:validation-api:1.0.0.GA') {
-        artifact {
-            name = 'validation-api'
-            type = 'jar'
-        }
-        artifact {
-            name = 'validation-api'
-            type = 'jar'
-            classifier = 'sources'
-        }
-    }
+	compile 'commons-logging:commons-logging:1.2'
+	compile 'org.hamcrest:hamcrest-core:1.3'
+	compile 'org.hamcrest:hamcrest-core:1.3'
+	testCompile 'junit:junit:4.12'
+compile	'org.springframework:spring-aop:4.2.5.RELEASE'
+compile 'org.springframework:spring-beans:4.2.5.RELEASE'
+compile 'org.springframework:spring-context:4.2.5.RELEASE'
+compile 'org.springframework:spring-core:4.2.5.RELEASE'
+compile 'org.springframework:spring-expression:4.2.5.RELEASE'
+testCompile 'org.springframework:spring-test:4.2.5.RELEASE'
 
-    // Runtime GWT libraries, should be included in WAR
-    runtime 'com.google.gwt:gwt-servlet:2.7.0'
-    //runtime 'org.json:json:20090211'
-
-    //Logging
-    compile 'org.slf4j:slf4j-api:1.6.2'
-    compile 'org.slf4j:jcl-over-slf4j:1.6.2'
-    compile 'org.slf4j:jul-to-slf4j:1.6.2'
-    compile 'ch.qos.logback:logback-classic:1.0.3'
-    compile 'ch.qos.logback:logback-core:1.0.3'
-    compile 'log4j:log4j:1.2.16'
-
-    compile 'com.google.gwt:gwt-user:2.7.0'
-    compile 'com.google.gwt:gwt-servlet:2.7.0'
-    compile 'com.google.gwt:gwt-dev:2.7.0'
-
-    compile 'com.google.gwt.inject:gin:1.5.0'
-    compile 'com.google.inject:guice:3.0-rc2'
-    compile 'com.google.inject.extensions:guice-assistedinject:3.0-rc2'
-
-    testCompile group: 'junit', name: 'junit', version: '4.+'
-    testCompile "org.springframework:spring-test:${spring_version}"
-    testCompile 'org.mockito:mockito-all:1.9.5-rc1+'
 }
 
 task createDirs << {
