--- a/build.gradle
+++ b/build.gradle
@@ -30,13 +30,13 @@ dependencies {
 
     compile 'commons-logging:commons-logging:1.2'
     compile 'org.hamcrest:hamcrest-core:1.3'
-    testCompile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
     compile 'org.springframework:spring-aop:4.2.5.RELEASE'
     compile 'org.springframework:spring-beans:4.2.5.RELEASE'
     compile 'org.springframework:spring-context:4.2.5.RELEASE'
     compile 'org.springframework:spring-core:4.2.5.RELEASE'
     compile 'org.springframework:spring-expression:4.2.5.RELEASE'
-    testCompile 'org.springframework:spring-test:4.2.5.RELEASE'
+    compile 'org.springframework:spring-test:4.2.5.RELEASE'
 
 }
 
