--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile 'org.springframework:spring-test:4.2.5.RELEASE'
     compile 'com.miglayout:miglayout:3.7.3.1'
     compile 'org.apache.commons:commons-collections4:4.1'
+    compile 'org.aspectj:aspectjrt:1.8.6'
+    compile 'org.aspectj:aspectjweaver:1.8.9'
 }
 
 task createDirs << {
