--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'org.apache.commons:commons-collections4:4.1'
     compile 'org.aspectj:aspectjrt:1.8.6'
     compile 'org.aspectj:aspectjweaver:1.8.9'
+    compile 'org.springframework:spring-web:4.2.6.RELEASE'
 }
 
 task createDirs << {
