--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     compile 'org.aspectj:aspectjrt:1.8.6'
     compile 'org.aspectj:aspectjweaver:1.8.9'
     compile 'org.springframework:spring-web:4.2.6.RELEASE'
+
+    compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.2.6.RELEASE'
+    compile group: 'com.h2database', name: 'h2', version: '1.4.191'
+    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
 }
 
 task createDirs << {
