--- a/src/spring/springboot/build.gradle
+++ b/src/spring/springboot/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin: 1.1.4.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin: 1.3.5.RELEASE")
     }
 }
 apply plugin: 'java'
@@ -16,6 +16,7 @@ repositories {
     mavenCentral()
 }
 dependencies {
+    compile "org.springframework.boot:spring-boot-gradle-plugin: 1.3.5.RELEASE"
     compile("org.springframework.boot:spring-boot-starter-web")
     /*
     When  the  application  is  run,  Spring
@@ -26,6 +27,9 @@ leaf with Spring
 MVC
      */
     compile("org.thymeleaf:thymeleaf-spring4")
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("com.h2database:h2")
+
 }
 task wrapper(type: Wrapper) {
     gradleVersion = '1.8'
