--- a/src/spring/data/application.properties
+++ b/src/spring/data/application.properties
@@ -1,1 +1,10 @@
-spring.profiles.active=test
+spring.profiles.active=prod
+
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/rgu_mrg
+jdbc.username=postgres
+jdbc.password=root
+
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql=true
+hibernate.format_sql=false
