--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,11 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-jdbc', version: '4.2.6.RELEASE'
     compile group: 'com.h2database', name: 'h2', version: '1.4.191'
     compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
-    compile group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
+    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.0-api', version: '1.0.1.Final'
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '4.3.11.Final'
+    compile group: 'net.sf.ehcache', name: 'ehcache', version: '2.10.1'
+    compile group: 'org.springframework', name: 'spring-context-support', version: '4.2.6.RELEASE'
 }
 
 task createDirs << {
